Avoid horizontal overflow for add-language overlay page.
See https://code.google.com/p/chromium/issues/detail?id=133346#c43

BUG=133346
TEST=verify on Link that the horizontal scrollbar does not appear.

Review URL: https://chromiumcodereview.appspot.com/12328127

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@184897 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 4a226ab8c1e0c3e514812eb41bb54ab5ba384656

--- a/chrome/browser/resources/options/language_options.css
+++ b/chrome/browser/resources/options/language_options.css
@@ -186,6 +186,11 @@
   padding-bottom: 10px;
 }
 
+/* TODO(hshi): Remove this temporary hack once the bug is fixed in Chrome. */
+#add-language-overlay-language-list {
+  width: -webkit-calc(100% - 4px);
+}
+
 .standalone-link-button {
   padding: 0;
 }
